omni/tests/goldens/types/undefined_ident_18.omni
let result18:int = missing18
